[package]
name = "llm-search-present"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
code-splitter = "0.1.5"
ignore = "0.4.23"
tokenizer = "0.1.2"
tree-sitter = "0.22.6"
tree-sitter-go = "0.21.2"
embed_anything = { version = "0.6.4", features = ["ort", "metal"] }
futures = "0.3"
futures-util = { version = "0.3", features = ["io"] }
vector = "0.4.1"
async-stream = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ollama-rs = "0.3.2"
